# python-tcod-template

./: .pre-commit-config.yaml  README.md  g.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
game/: __init__.py  components.py  state.py  states.py
