[project]
name = "tcod-template"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]
requires-python = ">=3.12"

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html
files = "."
exclude = ['^build/', '^\.']
explicit_package_bases = true
python_version = "3.12"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.ruff] # https://docs.astral.sh/ruff/settings/
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "COM",    # flake8-commas
    "E501",   # line-too-long
    "ISC001", # single-line-implicit-string-concatenation
    "S101",   # assert
    "S311",   # suspicious-non-cryptographic-random-usage
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "TCH001", # typing-only-first-party-import
    "TCH002", # typing-only-third-party-import
    "TCH003", # typing-only-standard-library-import
]

[tool.ruff.lint.isort] # https://docs.astral.sh/ruff/settings/#lintisort
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle] # https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "google"
